--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="id">
 <head>
@@ -12,13 +11,67 @@
         <h1>Portal Mikrotik</h1>
         <nav>
             <ul>
-                <li><a href="modules/pcc-calculator/index.html">PCC Calculator</a></li>
-                <li><a href="modules/vpn-generator/index.html">VPN Generator</a></li>
-                <li><a href="modules/queue-generator/index.html">Queue Generator</a></li>
+                <li><strong>Load Balancing</strong>
+                <ul>
+                    <li><a href="modules/load_balancing/pcc/pcc.html">PCC</a></li>
+                    <li><a href="modules/load_balancing/nth/nth.html">NTH</a></li>
+                    <li><a href="modules/load_balancing/ecmp/ecmp.html">ECMP</a></li>
+                    <li><a href="modules/load_balancing/failover_recursive_gateway/failover_recursive_gateway.html">Failover Recursive Gateway</a></li>
+                    <li><a href="modules/load_balancing/static_routing_using_mangle/static_routing_using_mangle.html">Static Routing Using Mangle</a></li>
+                    <li><a href="modules/load_balancing/static_routing_using_filter_raw/static_routing_using_filter_raw.html">Static Routing Using Filter Raw</a></li>
+                </ul></li>
+                <li><strong>Queue and QoS</strong>
+                <ul>
+                    <li><a href="modules/queue_and_qos/burst_limit_calculator/burst_limit_calculator.html">Burst Limit Calculator</a></li>
+                    <li><a href="modules/queue_and_qos/pcq_burst_rate_+_queue_size/pcq_burst_rate_+_queue_size.html">PCQ Burst Rate + Queue Size</a></li>
+                    <li><a href="modules/queue_and_qos/simple_queue_+_token_bucket/simple_queue_+_token_bucket.html">Simple Queue + Token Bucket</a></li>
+                    <li><a href="modules/queue_and_qos/queue_tree_+_bandwidth_shared_up/queue_tree_+_bandwidth_shared_up.html">Queue Tree + Bandwidth Shared Up</a></li>
+                </ul></li>
+                <li><strong>Hotspot and PPPoE</strong>
+                <ul>
+                    <li><a href="modules/hotspot_and_pppoe/free_hotspot_wi-fi_qr_code_template/free_hotspot_wi-fi_qr_code_template.html">Free Hotspot Wi-Fi QR Code Template</a></li>
+                    <li><a href="modules/hotspot_and_pppoe/block_sharing_hotspot/block_sharing_hotspot.html">Block Sharing Hotspot</a></li>
+                    <li><a href="modules/hotspot_and_pppoe/easy_hotspot_configuration_wizard/easy_hotspot_configuration_wizard.html">Easy Hotspot Configuration Wizard</a></li>
+                    <li><a href="modules/hotspot_and_pppoe/ppp_secrets_username_password_generator/ppp_secrets_username_password_generator.html">PPP Secrets Username Password Generator</a></li>
+                </ul></li>
+                <li><strong>DNS and Network Watch</strong>
+                <ul>
+                    <li><a href="modules/dns_and_network_watch/dns_over_https/dns_over_https.html">DNS over HTTPS</a></li>
+                    <li><a href="modules/dns_and_network_watch/netwatch_to_telegram/netwatch_to_telegram.html">Netwatch to Telegram</a></li>
+                    <li><a href="modules/dns_and_network_watch/change_or_random_mac_address/change_or_random_mac_address.html">Change or Random Mac Address</a></li>
+                    <li><a href="modules/dns_and_network_watch/bonding_interface/bonding_interface.html">Bonding Interface</a></li>
+                </ul></li>
+                <li><strong>Protection and Security</strong>
+                <ul>
+                    <li><a href="modules/protection_and_security/mikrotik_ninja/mikrotik_ninja.html">MikroTik Ninja</a></li>
+                    <li><a href="modules/protection_and_security/mikrotik_auto_backup/mikrotik_auto_backup.html">MikroTik Auto Backup</a></li>
+                    <li><a href="modules/protection_and_security/block_for_youtube,_tiktok/block_for_youtube,_tiktok.html">Block For Youtube, Tiktok</a></li>
+                    <li><a href="modules/protection_and_security/port_knocking_with_icmp/port_knocking_with_icmp.html">Port Knocking with ICMP</a></li>
+                </ul></li>
+                <li><strong>RouterOS Other Tools</strong>
+                <ul>
+                    <li><a href="modules/routeros_other_tools/ip_address_calculator/ip_address_calculator.html">IP Address Calculator</a></li>
+                    <li><a href="modules/routeros_other_tools/indonesia_time_zone_ntp/indonesia_time_zone_ntp.html">Indonesia Time Zone NTP</a></li>
+                    <li><a href="modules/routeros_other_tools/wifi.id_wms/wifi.id_wms.html">Wifi.id WMS</a></li>
+                    <li><a href="modules/routeros_other_tools/routerboard_comparison/routerboard_comparison.html">RouterBoard Comparison</a></li>
+                </ul></li>
+                <li><strong>MikroTik Windows Tools</strong>
+                <ul>
+                    <li><a href="modules/mikrotik_windows_tools/winbox-64/winbox-64.html">Winbox-64</a></li>
+                    <li><a href="modules/mikrotik_windows_tools/winbox-32/winbox-32.html">Winbox-32</a></li>
+                    <li><a href="modules/mikrotik_windows_tools/netinstall/netinstall.html">Netinstall</a></li>
+                    <li><a href="modules/mikrotik_windows_tools/bandwidth_test/bandwidth_test.html">Bandwidth Test</a></li>
+                </ul></li>
+                <li><strong>MikroTik Mobile Tools</strong>
+                <ul>
+                    <li><a href="modules/mikrotik_mobile_tools/mikrotik_winbox_iphone/mikrotik_winbox_iphone.html">MikroTik Winbox iPhone</a></li>
+                    <li><a href="modules/mikrotik_mobile_tools/mikrotik_vpn_android/mikrotik_vpn_android.html">MikroTik VPN Android</a></li>
+                    <li><a href="modules/mikrotik_mobile_tools/mikrotik_beacon_manager/mikrotik_beacon_manager.html">MikroTik Beacon Manager</a></li>
+                </ul></li>
             </ul>
         </nav>
     </header>
-    
+
     <main>
         <section id="welcome">
             <h2>Selamat datang di Portal Mikrotik!</h2>
