--- a/header.html
+++ b/header.html
@@ -1,10 +1,10 @@
-<header>
-    <h1>PCC Load Balancing Generator</h1>
+<header style="background: linear-gradient(90deg, #6a11cb, #2575fc); color: white; padding: 20px 0; text-align: center;">
+    <h1 style="margin: 0; font-size: 36px; font-weight: 700;">Opuz's MikTools</h1>
     <nav>
-        <ul>
-            <li><a href="#home">Beranda</a></li>
-            <li><a href="#generate">Generator Script</a></li>
-            <li><a href="#about">Tentang</a></li>
+        <ul style="list-style: none; padding: 0; margin: 10px 0; display: flex; justify-content: center;">
+            <li style="margin-right: 20px;"><a href="/" style="color: white; text-decoration: none; font-size: 18px;">Home</a></li>
+            <li style="margin-right: 20px;"><a href="#generate" style="color: white; text-decoration: none; font-size: 18px;">PCC Generator</a></li>
+            <li><a href="#about" style="color: white; text-decoration: none; font-size: 18px;">About</a></li>
         </ul>
     </nav>
 </header>
