--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!-- Header with breadcrumb and navbar -->
+    <!-- Header with navbar and breadcrumb -->
     <div id="header"></div>
 
     <!-- Breadcrumb -->
-    <nav aria-label="breadcrumb">
+    <nav aria-label="breadcrumb" class="breadcrumb-container">
         <ol class="breadcrumb">
             <li class="breadcrumb-item"><a href="/">Home</a></li>
             <li class="breadcrumb-item active" aria-current="page">PCC Generator</li>
@@ -20,8 +20,9 @@
 
     <!-- Main Content Area -->
     <div class="container">
-        <div id="formInput"></div>
-        <div id="scriptOutput"></div>
+        <h2 class="page-title">PCC Load Balancing Generator</h2>
+        <div id="formInput" class="module"></div>
+        <div id="scriptOutput" class="module"></div>
     </div>
 
     <!-- Footer -->
