--- a/footer.html
+++ b/footer.html
@@ -1,3 +1,3 @@
-<footer>
-    <p>&copy; 2025 [Nama Anda atau Nama Perusahaan Anda]. All Rights Reserved.</p>
+<footer style="background: linear-gradient(90deg, #6a11cb, #2575fc); color: white; text-align: center; padding: 20px 0;">
+    <p style="margin: 0; font-size: 16px;">&copy; 2025 Opuz. All Rights Reserved.</p>
 </footer>
