--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!-- Header with navbar and breadcrumb -->
+    <!-- Dynamically load the header -->
     <div id="header"></div>
 
     <!-- Breadcrumb -->
@@ -25,7 +25,7 @@
         <div id="scriptOutput" class="module"></div>
     </div>
 
-    <!-- Footer -->
+    <!-- Dynamically load the footer -->
     <div id="footer"></div>
 
     <script src="scripts.js"></script>
