--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MikTools - Home</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/style.css">
 </head>
 <body>
-    <!-- Dynamically load the header -->
+    <!-- Dynamically load the header from absolute path -->
     <div id="header"></div>
 
     <!-- Breadcrumb -->
@@ -25,9 +25,9 @@
         <div id="scriptOutput" class="module"></div>
     </div>
 
-    <!-- Dynamically load the footer -->
+    <!-- Dynamically load the footer from absolute path -->
     <div id="footer"></div>
 
-    <script src="scripts.js"></script>
+    <script src="/scripts.js"></script>
 </body>
 </html>
