--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MikTools - Home</title>
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <!-- Dynamically load the header from absolute path -->
@@ -28,6 +28,6 @@
     <!-- Dynamically load the footer from absolute path -->
     <div id="footer"></div>
 
-    <script src="/scripts.js"></script>
+    <script src="scripts.js"></script>
 </body>
 </html>
