--- a/index.html
+++ b/index.html
@@ -1,33 +1,22 @@
 <!DOCTYPE html>
-<html lang="id">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MikTools - Home</title>
-    <link rel="stylesheet" href="style.css">
+    <title>RouterOS Tools</title>
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-    <!-- Dynamically load the header from absolute path -->
-    <div id="header"></div>
-
-    <!-- Breadcrumb -->
-    <nav aria-label="breadcrumb" class="breadcrumb-container">
-        <ol class="breadcrumb">
-            <li class="breadcrumb-item"><a href="/">Home</a></li>
-            <li class="breadcrumb-item active" aria-current="page">PCC Generator</li>
-        </ol>
-    </nav>
-
-    <!-- Main Content Area -->
-    <div class="container">
-        <h2 class="page-title">PCC Load Balancing Generator</h2>
-        <div id="formInput" class="module"></div>
-        <div id="scriptOutput" class="module"></div>
-    </div>
-
-    <!-- Dynamically load the footer from absolute path -->
-    <div id="footer"></div>
-
-    <script src="scripts.js"></script>
+    <header>
+        <h1>Welcome to RouterOS Tools Portal</h1>
+        <nav>
+            <ul>
+                <li><a href="modules/pcc-generator.html">PCC-GENERATOR</a></li>
+            </ul>
+        </nav>
+    </header>
+    <footer>
+        <p>&copy; 2025 RouterOS Tools. All rights reserved.</p>
+    </footer>
 </body>
 </html>
