--- a/modules/pcc-generator.html
+++ b/modules/pcc-generator.html
@@ -17,6 +17,7 @@
         <section>
             <h2>Generate PCC Configuration</h2>
             <form id="pcc-form">
+                <!-- RouterOS Version Dropdown -->
                 <div>
                     <label for="routeros-version">RouterOS Version:</label>
                     <select id="routeros-version" name="routeros-version" required>
@@ -25,36 +26,42 @@
                     </select>
                 </div>
 
+                <!-- IP WAN/Gateway -->
                 <div>
-                    <label for="src-ip">Source IP Address:</label>
-                    <input type="text" id="src-ip" name="src-ip" placeholder="Enter Source IP" required>
+                    <label for="src-ip">IP WAN / Gateway:</label>
+                    <input type="text" id="src-ip" name="src-ip" placeholder="Enter WAN IP/Gateway" required>
                 </div>
 
+                <!-- IP LAN/Bridge -->
                 <div>
-                    <label for="dst-ip">Destination IP Address:</label>
-                    <input type="text" id="dst-ip" name="dst-ip" placeholder="Enter Destination IP" required>
+                    <label for="dst-ip">IP LAN / Bridge-LAN:</label>
+                    <input type="text" id="dst-ip" name="dst-ip" placeholder="Enter LAN IP / Bridge" required>
                 </div>
 
+                <!-- Interface -->
                 <div>
-                    <label for="interface">Interface:</label>
-                    <input type="text" id="interface" name="interface" placeholder="Enter Interface (e.g., ether1)" required>
+                    <label for="interface">Interface (e.g., ether1):</label>
+                    <input type="text" id="interface" name="interface" placeholder="Enter Interface" required>
                 </div>
 
+                <!-- WAN Sources -->
                 <div id="wan-sources">
                     <label>WAN Sources:</label>
                     <div class="wan-source">
-                        <input type="text" name="wan-source" placeholder="Enter WAN Source" required>
+                        <input type="text" name="wan-source" placeholder="Enter WAN Source (e.g., 192.168.1.1)" required>
                     </div>
                     <button type="button" id="add-wan-source">Add WAN Source</button>
                 </div>
 
+                <!-- Gateway -->
                 <div>
-                    <label for="gateway">Gateway IP:</label>
+                    <label for="gateway">Gateway IP (e.g., 192.168.100.1):</label>
                     <input type="text" id="gateway" name="gateway" placeholder="Enter Gateway IP" required>
                 </div>
 
+                <!-- Routing Mark -->
                 <div>
-                    <label for="mark-routing">Routing Mark:</label>
+                    <label for="mark-routing">Routing Mark (e.g., route1):</label>
                     <input type="text" id="mark-routing" name="mark-routing" placeholder="Enter Routing Mark" required>
                 </div>
 
